0.2.6
- Fixed native file mode (issue #39)

0.2.5 (2021-11-06)
- New app icon
- Added templates for profiles
- Added insert data dialog
- Added files compare dialog
- Fixed issues with binary file type (issue #36)
- Fixed issue with transparency (issue #38)
- Fixed issue with opening zip files

0.2.4 (2021-04-11)
- Added string field in values panel (issue #8)
- Fixed 2021.1: Can't close any tabs once a binary file is opened (issue #35)

0.2.3 (2020-07-30)
- Fixed debugger array support for PHP
- Added binary file type (issue #30)

0.2.2 (2020-01-25)
- Minor GUI improvements
- Support for multiple decoders in debugging view
- Display the number of bytes selected (issue #26)
- Fixed opening via dialog crashes IntelliJ (mac) (issue #22)
- Fixed "HIDE_DEFAULT_EDITOR is supported only for DumbAware providers" error message (issue #24)
- Fixed NullPointerException when trying to hex-view bytearray in Debug mode (issue #27)
- Fixed Editor stops responding when I use Find (issue #19)
- Fixed Cursor position is lost if you switch tabs (issue #25)

0.2.1 (2019-08-22)
- Minor GUI improvements
- Context aware popup menu
- Go-to dialog position to support position from end (issue #14)
- Go-to dialog position to support different numerical bases (issue #11)
- Support for ENTER key in preview section
- Minor fix to view of native Java debug values
- Minor fix to integration (issues #7, #18)

0.2.0 (2019-04-13)
- Renamed to BinEd
- Updated to newer version of library
- Support for half-size space
- Support for layout, theme and colors profiles
- Added support for different numerical bases in status bar (issue #13)
- Configurable address margin (issue #12)
- Fixed issue with copy as code for debug view (issue #20)

0.1.7 (2018-08-24)
- Fixed issue with debugging in CLion (issue #4)
- Fixed issue with goto does not scrolling window (issue #5)
- Added basic support for debug view of bytearray and bytes for Python

0.1.6.1 (2018-03-07)
- Fixed issue with byte array / NPE
