@@ -33,8 +33,7 @@ Sources: <a href="https://github.com/exbin/bined-intellij-plugin">https://github
 
     <change-notes><![CDATA[
 <ul><li>Fixed native file mode (issue #39)</li>
-<li>.</li>
-
+<li>Added options page</li>
 </ul>
     ]]>
     </change-notes>
@@ -45,7 +44,7 @@ Sources: <a href="https://github.com/exbin/bined-intellij-plugin">https://github
     <!-- please see http://www.jetbrains.org/intellij/sdk/docs/basics/getting_started/plugin_compatibility.html
          on how to target different products -->
     <depends>com.intellij.modules.lang</depends>
-    <depends>com.intellij.modules.xdebugger</depends>
+    <depends optional="true" config-file="debugger-ext.xml">com.intellij.modules.xdebugger</depends>
     <depends optional="true" config-file="java-ext.xml">com.intellij.modules.java</depends>
     <depends optional="true" config-file="python-ext.xml">com.intellij.modules.python</depends>
     <depends optional="true" config-file="php-ext.xml">com.jetbrains.php</depends>
@@ -60,18 +59,23 @@ Sources: <a href="https://github.com/exbin/bined-intellij-plugin">https://github
     </project-components>
 
     <application-components>
-        <component><implementation-class>org.exbin.bined.intellij.BinEdFileEditorProvider</implementation-class></component>
-        <!--        <component>
-            <implementation-class>org.exbin.bined.intellij.Configuration</implementation-class>
+        <component>
+            <implementation-class>org.exbin.bined.intellij.BinEdFileEditorProvider</implementation-class>
+        </component>
+        <!-- <component>
+            <implementation-class>org.exbin.bined.intellij.BinEdApplicationSettings</implementation-class>
         </component> -->
     </application-components>
 
     <extensions defaultExtensionNs="com.intellij">
-        <fileType name="Binary File" implementationClass="org.exbin.bined.intellij.BinaryFileType" fieldName="INSTANCE" language="" extensions=""/>
+        <fileType name="Binary File" implementationClass="org.exbin.bined.intellij.BinaryFileType" fieldName="INSTANCE"
+                  language="" extensions=""/>
+        <fileTemplateGroup implementation="org.exbin.bined.intellij.BinEdFileTemplateGroupDescriptionFactory"/>
         <virtualFileSystem implementationClass="org.exbin.bined.intellij.BinEdFileSystem" key="bined" physical="false"/>
         <fileEditorProvider implementation="org.exbin.bined.intellij.BinEdFileEditorProvider"/>
         <fileEditorProvider implementation="org.exbin.bined.intellij.BinEdNativeFileEditorProvider"/>
         <!-- <diff.DiffTool implementation="org.exbin.bined.intellij.BinEdDiffTool"/> -->
+        <applicationConfigurable instance="org.exbin.bined.intellij.BinEdSettingsConfigurable" id="org.exbin.bined.intellij.BinEdSettingsConfigurable" parentId="tools"/>
     </extensions>
 
     <actions>
@@ -93,18 +97,5 @@ Sources: <a href="https://github.com/exbin/bined-intellij-plugin">https://github
             <reference id="BinEdEditor.OpenAsBinaryAction"/>
             <add-to-group group-id="EditorPopupMenu" relative-to-action="EditorDelete" anchor="after"/>
         </group>
-
-        <group>
-            <action id="Debugger.BinEdShowAsBinary" class="org.exbin.bined.intellij.debug.DebugViewBinaryAction"
-                    text="Show As Binary" icon="/images/icon-idea.png"/>
-
-            <add-to-group group-id="XDebugger.Watches.Tree.Popup" anchor="last"/>
-            <add-to-group group-id="XDebugger.Watches.Tree.Toolbar" anchor="after"
-                          relative-to-action="XDebugger.Actions"/>
-            <add-to-group group-id="XDebugger.Variables.Tree.Popup" anchor="last"/>
-            <add-to-group group-id="XDebugger.Evaluation.Dialog.Tree.Popup" anchor="last"/>
-            <add-to-group group-id="XDebugger.Inspect.Tree.Popup" anchor="last"/>
-        </group>
     </actions>
-
 </idea-plugin>
