@@ -1,0 +1,69 @@
+/*
+ * Copyright (C) ExBin Project
+ *
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
+ *
+ *     http://www.apache.org/licenses/LICENSE-2.0
+ *
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
+ */
+package org.exbin.bined.intellij;
+
+import com.intellij.openapi.options.Configurable;
+import com.intellij.openapi.options.ConfigurationException;
+import org.exbin.bined.intellij.gui.BinEdComponentPanel;
+import org.exbin.bined.intellij.gui.BinEdOptionsPanel;
+import org.exbin.bined.intellij.gui.BinEdOptionsPanelBorder;
+import org.exbin.framework.bined.preferences.BinaryEditorPreferences;
+import org.jetbrains.annotations.Nullable;
+
+import javax.annotation.Nonnull;
+import javax.swing.*;
+
+/**
+ * Settings component.
+ *
+ * @author ExBin Project (http://exbin.org)
+ * @version 0.2.6 2021/12/30
+ */
+public class BinEdSettingsConfigurable implements Configurable {
+
+    private BinEdOptionsPanelBorder optionsPanelWrapper;
+
+    public BinEdSettingsConfigurable() {
+    }
+
+    @Nonnull
+    @Override
+    public String getDisplayName() {
+        return "BinEd Plugin";
+    }
+
+    @Nullable
+    @Override
+    public JComponent createComponent() {
+        optionsPanelWrapper = new BinEdOptionsPanelBorder();
+        BinEdOptionsPanel optionsPanel = optionsPanelWrapper.getOptionsPanel();
+        BinaryEditorPreferences preferences = new BinaryEditorPreferences(new IntelliJPreferencesWrapper(BinEdComponentPanel.getPreferences(), BinEdIntelliJPlugin.PLUGIN_PREFIX));
+        optionsPanel.setPreferences(preferences);
+        optionsPanel.loadFromPreferences();
+        return optionsPanelWrapper;
+    }
+
+    @Override
+    public boolean isModified() {
+        return false;
+    }
+
+    @Override
+    public void apply() throws ConfigurationException {
+        BinEdOptionsPanel optionsPanel = optionsPanelWrapper.getOptionsPanel();
+        optionsPanel.applyToOptions();
+    }
+}
